--- a/templates/board.html
+++ b/templates/board.html
@@ -11,6 +11,7 @@
     <title>πchan - /{{ board.id }}</title>
 </head>
 <body class="chan-bg vh-100 d-flex flex-column align-items-center">
+    
     <nav class="chan-nav d-flex w-100 border-bottom py-1" style="height: fit-content;">
         <ul class="d-flex gap-2 w-100 px-2 list-unstyled m-0" style="height: fit-content; width: max-content;">
             {% for board in boards %}
@@ -73,8 +74,7 @@
                     </div>
                     <div class="modal-body">
                         <form class="d-flex flex-column gap-2" action="" method="post">
-                            <textarea class="w-100" placeholder="Content" id="reply_content" required></textarea>
-                            <input type="hidden" name="new_reply_id" value="" id="new_reply_id" required>
+                            <textarea class="w-100" placeholder="Content" id="reply_content" required></textarea>    
                             <input type="hidden" name="new_reply_type" value="{{ 1 if api_key else 0 }}" id="new_reply_type" required>
                             <input type="file" name="" accept=".jpg,.png" id="image-r">
 
@@ -91,9 +91,6 @@
   
         <hr class="border-white w-100 my-0" style="margin-bottom: 1rem !important;">
   
-        <!-- Rendering Threads and Replies -->
-        <section class="d-flex flex-column overflow-scroll align-items-start w-100 px-3 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
-            
             {% macro count_replies(replies, c=namespace(value=0)) %}
                 
                 {% for reply in replies %}
@@ -111,12 +108,12 @@
 
                 {% for reply in replies %}
 
-                    {% if count.value <= 5 %}
+                    {% if count.value < 5 %}
                         {% set count.value = count.value + 1 %}
-                            <div id="r{{ reply.id }}" class="chan-{{ 'admin-' if reply.type == 1 }}thread-info d-flex flex-column" style="min-width: 300px; margin-left: {{ 20 * level }}px; width: fit-content;">
+                            <div id="r{{ reply.id }}" class="chan-{{ 'admin-' if reply.type == 1 }}thread-info d-flex flex-column" style="min-width: 350px; margin-left: {{ 20 * level }}px; width: fit-content;">
                                 <div class="d-flex justify-content-start align-content-start gap-1">
                                     <div class="d-flex gap-1 align-items-center justify-content-start m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
-                                        <span class="{{ 'text-info' if reply.type == 1 }} m-0" style="font-size: 0.7rem; {{ 'color: rgba(255, 255, 255, 0.700);' if reply.type == 0 }}">
+                                        <span class="m-0" style="font-size: 0.7rem; {{ 'color: rgba(255, 255, 255, 0.700);' if reply.type == 0 else 'color: rgba(0, 255, 136);' }}">
                                             {{ 'Admin:' if reply.type == 1 else 'User:' }}
                                         </span>
                                         <span class="m-0 text-ellipsis" style="font-size: 0.7rem; color: rgba(255, 255, 255, 0.700);">
@@ -173,9 +170,14 @@
                                             <i style="font-size: 0.7rem;" class="fa-solid fa-reply"></i>
                                             <p style="font-size: 0.7rem;" class="m-0">Reply</p>   
                                         </button>
+                                        {% if api_key %}
+                                            <button onclick="deletePost({{ reply.id }}, 'r')" class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(243, 35, 35, 0.2); border-radius: 3px;" type="button">
+                                                <i style="font-size: 0.7rem;" class="fa-solid fa-eraser"></i>
+                                                <p style="font-size: 0.7rem;" class="m-0">Delete</p>   
+                                            </button>
+                                        {% endif %}
                                     </div>
                                 </div>
-
                             </div>
                         
                         <!-- Render nested replies recursively with updated level -->
@@ -195,12 +197,15 @@
 
             {% endmacro %}
 
+        <!-- Rendering Threads and Replies -->
+        <section class="d-flex flex-column align-items-start w-100 px-3 gap-3" style="padding-bottom: 1rem; height: fit-content;" id="threads">
+
             {% for thread in admin_threads %}
                 <!-- Thread -->
                 <div class="d-flex gap-1">
                     {% if thread.image %}
-                        <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: 400px;">
-                            <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" alt="">
+                        <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content;">
+                            <img class="rounded-1 shadow img-fluid" src="{{ url_for('Images.Image', id=thread.image.id) }}" >
                             <div class="d-flex gap-1">
                                 <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
                                 <a style="font-size: 0.7rem;" class="m-0 text-ellipsis" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
@@ -210,12 +215,12 @@
                     {% endif %}
                     <div class="d-flex flex-column gap-1 w-100">
                         
-                        <div id="t{{ thread.id }}" class="chan-admin-thread-info border-info-subtle" style="min-width: 300px; width: fit-content;">
+                        <div id="t{{ thread.id }}" class="chan-admin-thread-info border-info-subtle" style="min-width: 350px; width: fit-content;">
                             <div class="d-flex gap-2">
                                 <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                                 <div class="d-flex flex-column justify-content-around">
                                     <div class="d-flex align-items-center gap-1">
-                                        <p class="text-info m-0" style="font-size: 0.7rem;">Admin:</p>
+                                        <p class="m-0" style="font-size: 0.7rem; color: rgba(0, 255, 136);">Admin:</p>
                                         <p class="m-0 text-ellipsis" style="font-size: 0.7rem !important; color: rgba(255, 255, 255, 0.700);">{{ thread.user_token }}</p>
                                         <img style="width: 15px; height: 15px;" src="{{ url_for('static', filename='pi.svg') }}" alt="">
                                     </div>
@@ -245,6 +250,12 @@
                                         <i style="font-size: 0.7rem;" class="fa-solid fa-reply"></i>
                                         <p style="font-size: 0.7rem;" class="m-0">Reply</p>   
                                     </button>
+                                    {% if api_key %}
+                                        <button onclick="deletePost({{ thread.id }}, 't')" class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(243, 35, 35, 0.2); border-radius: 3px;" type="button">
+                                            <i style="font-size: 0.7rem;" class="fa-solid fa-eraser"></i>
+                                            <p style="font-size: 0.7rem;" class="m-0">Delete</p>   
+                                        </button>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -257,8 +268,8 @@
                 <!-- Thread -->
                 <div class="d-flex gap-1">
                     {% if thread.image %}
-                        <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: 400px;">
-                            <img class="rounded-1 shadow" src="{{ url_for('Images.Image', id=thread.image.id) }}" alt="">
+                        <div class="d-flex flex-column justify-content-start" style="max-width: 235px; max-height: fit-content;">
+                            <img class="rounded-1 shadow img-fluid" src="{{ url_for('Images.Image', id=thread.image.id) }}" >
                             <div class="d-flex gap-1">
                                 <p style="font-size: 0.7rem; color: #696969;" class="m-0">File: </p>
                                 <a style="font-size: 0.7rem;" class="m-0 text-ellipsis" href="{{ url_for('Images.Image', id=thread.image.id) }}">{{ thread.image.name }}</a>
@@ -268,7 +279,7 @@
                     {% endif %}
                     <div class="d-flex flex-column gap-1 w-100">
                         
-                        <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 300px; width: fit-content;">
+                        <div id="t{{ thread.id }}" class="chan-thread-info border-info-subtle" style="min-width: 350px; width: fit-content;">
                             <div class="d-flex gap-2">
                                 <a class="chan-thread-title text-ellipsis m-0 text-decoration-none fst-italic" href="{{ url_for('Admin.Thread' if api_key else 'Threads.Thread', id=thread.id, **({'api_key': api_key} if api_key else {})) }}" style="font-weight: 500; text;">{{ thread.title }}</a>
                                 <div class="d-flex flex-column justify-content-around">
@@ -299,6 +310,12 @@
                                         <i style="font-size: 0.7rem;" class="fa-solid fa-reply"></i>
                                         <p style="font-size: 0.7rem;" class="m-0">Reply</p>   
                                     </button>
+                                    {% if api_key %}
+                                        <button onclick="deletePost({{ thread.id }}, 't')" class="d-flex gap-1 align-items-center text-white p-0 border-0 px-1" style="background-color: rgba(243, 35, 35, 0.2); border-radius: 3px;" type="button">
+                                            <i style="font-size: 0.7rem;" class="fa-solid fa-eraser"></i>
+                                            <p style="font-size: 0.7rem;" class="m-0">Delete</p>   
+                                        </button>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -308,7 +325,6 @@
                 <hr class="border-white my-0 mx-auto" style="width: 100%;"> 
             {% endfor %}
 
-
         </section>
 
     </main>
@@ -316,5 +332,32 @@
     <script src="https://cdn.jsdelivr.net/npm/@fingerprintjs/fingerprintjs@3/dist/fp.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="{{ url_for('static', filename='js/board.js') }}"></script>
+    {% if api_key %}
+        <script>
+            async function deletePost(id, post_type){
+                
+                const currentUrl = window.location.href;
+                const url = new URL(currentUrl);
+                const params = new URLSearchParams(url.search);
+                const apiKey = params.get('api_key')
+
+                const response = await fetch(`/${post_type == 't' ? 'thread' : 'reply'}/${id}?api_key=${apiKey}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error(`Server error: ${response.status}`);
+                }
+
+                const responseData = await response.json();
+
+                location.reload()
+                
+            }
+        </script>
+    {% endif %}
 </body>
 </html>
